Write SPIs to META-INF/generated-services so that they can be merged later via avaje-spi-service (#616)
* write spis to a different folder

* Update InjectProcessorTest.java

* Update InjectProcessorTest.java

* remove hard spi dependency

* Update ProcessingContext.java

* Remove ProcessingContext.testInit() and adjust test

---------

Co-authored-by: Rob Bygrave <robin.bygrave@gmail.com>